# Utility

./: .gitignore  .launch_commands.txt.swo  .launch_commands.txt.swp  .segFault.cpp.swp  CMakeLists.txt  README.md  TODO.md  allPrimes.cpp  arg_test.cpp  arg_test.py  assignment_operator.cpp  auto_ptr.cpp  average_class.cpp  bit_op.cpp  boost_test.cpp  calculate.cpp  car.cpp  cards.cpp  casting.cpp  char_array.cpp  char_pointer.cpp  cin_terminal.cpp  class.cpp  classOverload.py  const_class_member.cpp  constants.h  constexpr_fib.cpp  constructor.cpp  container.h  container_test.cpp  copy_constructor.cpp  countOcc.cpp  covariance.cpp  covariance_eigen.cpp  custom_array.cpp  cv_test.cpp  deep_copy.cpp  derived.cpp  destructor.cpp  destuctor.cpp  (+144 more)
Vectors/: Point.cpp  Point.h  Vector.cpp  Vector.h  a.out  main.cpp
creature_inheritance/: creature.h  main.cpp  point.h
dataset_processor/: CMakeLists.txt
dataset_processor/include/: file_parser.h  g2o_parser.h  graph.h  icp.h  keypoints_gui.h  sift_icp.h
dataset_processor/src/: calculate_rt.cpp  composite_gui.cpp  mouse_click.cpp
icp/: icp_framework.py  misc_tools.py
include/: myclass.h  second_class.h
iou/: a.out  ground_truth.txt  input.cpp  iou  iou.cpp  result.txt
linear_algebra/: README.md  orthonormal.cpp
matplotlib_cpp/: CMakeLists.txt  README.md
matplotlib_cpp/include/: graph.h
matplotlib_cpp/src/: graph.cpp  number_plot.cpp  relative_edges.cpp  synthetic_poses.cpp
parralel_computing/: test.cu  test1.cu  test2.cu  test3.cu
pcl/: CMakeLists.txt  cloud_assemble  cloud_assemble.cpp  colorize.cpp  concatanate.cpp  find_point.cpp  manual_correspondance.cpp  matrix_transformation.cpp  merge.cpp  optimized_poses2.g2o  pcl_load.cpp  pcl_test.cpp  point_cloud_feature.cpp  ransac.cpp  ransac_plane.cpp  transformation.cpp  voxelize.cpp
pcl/opencv/: CMakeLists.txt  cloud_coordinate_axis.cpp  color2gray.cpp  cv_test.cpp  depthTo3d.py  feature_detection.cpp  feature_detectors.cpp  generate_gibson_cloud.cpp  generate_point_cloud.cpp  grabcut.cpp  opencv_depthto3d.cpp  orb_python.py  orb_test.cpp  sift_icp.cpp
pcl/opencv/include/: keypoints_gui.h
ros/: printer_node.cpp
src/: lib_test.cpp  myclass.cpp
sublimes/: feature_detection.sublime-workspace  icp_odometry.sublime-workspace  optimizer.sublime-workspace  super4pcs.sublime-workspace
visual_odometry/: CMakeLists.txt
visual_odometry/include/: generate_graph.h  graph.h  sift_icp.h
visual_odometry/src/: icp_odometry.cpp  relative_edges.cpp
