cmake_minimum_required (VERSION 3.5.1)
project (icp)
find_package (PCL 1.7 REQUIRED)
set (CMAKE_CXX_STANDARD 14)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(pcl_test pcl_load.cpp)
add_executable(transformation transformation.cpp)
add_executable(merge merge.cpp)
add_executable(concatanate concatanate.cpp)
add_executable(ransac ransac.cpp)
add_executable(ransac_plane ransac_plane.cpp)
add_executable(cloud_assemble cloud_assemble.cpp)
add_executable(manual_correspondance manual_correspondance.cpp)

target_link_libraries(pcl_test ${PCL_LIBRARIES})
target_link_libraries(transformation ${PCL_LIBRARIES})
target_link_libraries(merge ${PCL_LIBRARIES})
target_link_libraries(concatanate ${PCL_LIBRARIES})
target_link_libraries(ransac ${PCL_LIBRARIES})
target_link_libraries(ransac_plane ${PCL_LIBRARIES})
target_link_libraries(cloud_assemble ${PCL_LIBRARIES})
target_link_libraries(manual_correspondance ${PCL_LIBRARIES})
